--- a/cajero-service.yml
+++ b/cajero-service.yml
@@ -1,3 +1,3 @@
 server:
   port: ${PORT:8863}
-message: Configuración de Cajero en el servidor levantado.
+message: Configuración de Cajero en el servidor levantado!
