--- a/customer-service.yml
+++ b/customer-service.yml
@@ -1,3 +1,3 @@
 server:
   port: ${PORT:8864}
-message: Configuración de Cajero en el servidor levantado!
+message: Configuración de Costumer en el servidor levantado!
