--- a/customer-service.yml
+++ b/customer-service.yml
@@ -1,3 +1,17 @@
 server:
   port: ${PORT:8864}
 message: Configuración de Costumer en el servidor levantado!
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    password: 12102021
+    url: jdbc:mysql://localhost:3306/crudcloud?serverTimezone=UTC
+    username: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+      database-plataform: org.hibernate.dialect.MySQLDialect
+  cloud:
+    config:
+      uri: http://localhost:8860
+      
