--- a/categoria-service.yml
+++ b/categoria-service.yml
@@ -1,3 +1,16 @@
 server:
    port: ${PORT:8869}
 message: Configuración de Categoria en el servidor levantado!
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    password: 12102021
+    url: jdbc:mysql://localhost:3306/crudcloud?serverTimezone=UTC
+    username: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+      database-plataform: org.hibernate.dialect.MySQLDialect
+  cloud:
+    config:
+      uri: http://localhost:8860
